// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-text-like #render should render clearable component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render clearable component as expected (2) 1`] = `
<gux-form-field-text-like clearable="">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
            <gux-form-field-input-clear-button>
            </gux-form-field-input-clear-button>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render clearable component as expected (3) 1`] = `
<gux-form-field-text-like clearable="true">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
            <gux-form-field-input-clear-button>
            </gux-form-field-input-clear-button>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render clearable component as expected (4) 1`] = `
<gux-form-field-text-like clearable="false">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render clearable component as expected (5) 1`] = `
<gux-form-field-text-like clearable="">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-disabled">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-invalid="true" aria-describedby="gux-form-field-error-i">
  <label slot="label" for="gux-form-field-input-i">
    Default
  </label>
  <span slot="error" id="gux-form-field-error-i">
    This is an error message
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  <label slot="label" for="gux-form-field-input-i">
    Default
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-label-info-beta-i">
  <label slot="label" for="gux-form-field-input-i">
    Default
  </label>
  <gux-label-info-beta slot="label-info" id="gux-label-info-beta-i">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when an optional "prefix" slot is provided 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-has-prefix">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-prefix-i">
  <label slot="label" for="gux-form-field-input-i">
    Default
  </label>
  <span slot="prefix" id="gux-prefix-i">
    Prefix
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when an optional "suffix" slot is provided 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-has-suffix">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-suffix-i">
  <label slot="label" for="gux-form-field-input-i">
    Default
  </label>
  <span slot="suffix" id="gux-suffix-i">
    Suffix
  </span>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-text-like indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when indicator-mark is "required" 1`] = `
<gux-form-field-text-like indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when input attribute is "disabled" 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-disabled">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when input attribute is "required" 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above gux-required">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" required="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when input type is "email" 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="email" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when input type is "password" 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="password" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when input type is "text" 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when label-position is above 1`] = `
<gux-form-field-text-like label-position="above">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when label-position is beside 1`] = `
<gux-form-field-text-like label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-beside">
      <div class="gux-form-field-label gux-beside">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render component as expected when label-position is screenreader 1`] = `
<gux-form-field-text-like label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render loading component as expected (1) 1`] = `
<gux-form-field-text-like>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render loading component as expected (2) 1`] = `
<gux-form-field-text-like loading="">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <div role="status">
              <gux-radial-loading context="input">
              </gux-radial-loading>
            </div>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render loading component as expected (3) 1`] = `
<gux-form-field-text-like loading="true">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <div role="status">
              <gux-radial-loading context="input">
              </gux-radial-loading>
            </div>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render loading component as expected (4) 1`] = `
<gux-form-field-text-like loading="false">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;

exports[`gux-form-field-text-like #render should render loading component as expected (5) 1`] = `
<gux-form-field-text-like loading="">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-disabled">
            <slot name="prefix">
            </slot>
            <slot name="input">
            </slot>
            <div role="status">
              <gux-radial-loading context="input">
              </gux-radial-loading>
            </div>
            <slot name="suffix">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="text" value="Sample text" disabled="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-text-like>
`;
